<resources>
    <string name="app_name">Personal German Learning</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">ramin.armanfar@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_herr_professor">Herr Professor</string>
    <string name="menu_personal_dictionary">Personal Dictionary</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_about">About App</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
