<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_menu_container"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/main_menu_container"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnHerrProfessorList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_herr_professor_list" />

        <Button
            android:id="@+id/btnPersonalDictionary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/menu_personal_dictionary" />

        <Button
            android:id="@+id/btnProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/menu_profile" />

        <Button
            android:id="@+id/btnTools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/menu_tools" />

        <Button
            android:id="@+id/btnAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/menu_about" />
    </LinearLayout>
</RelativeLayout>